[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Battlefield.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 160, 0, 0, 0, 0, 160, 160, 0, 0, 0, 0, 160, 320, 0, 0, 0, 0, 320, 320, 0, 0, 0, 0, 320, 160, 0, 0, 0, 0, 480, 160, 0, 0, 0, 0, 480, 480, 0, 0, 0, 0, 640, 480 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 325, 325 )

[node name="Battlefield" type="Node2D"]
script = ExtResource( 3 )

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 315, 315 )
shape = SubResource( 2 )

[node name="Preview" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.192157 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 14.0
text = "Kills: 0 
Money: 0"

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
